--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,4 +27,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: test
-        run: cd add && go test
+        run: cd ./add && go test
