--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Build
         run: go build -v ./...
       - name: Test with the Go CLI
-        run: go ./add/test
+        run: go test ./add
